envoy.yaml
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001

static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 80
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
          codec_type: auto
          stat_prefix: ingress_http
          access_log:
            - name: envoy.file_access_log
              config:
                path: "/dev/stdout"
          route_config:
            name: local_route
            virtual_hosts:
            - name: backend
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: target_cluster
              - match:
                  prefix: "/events"
                route:
                  cluster: target_cluster
              - match:
                  prefix: "/v2/bridges"
                route:
                  cluster: target_cluster
          http_filters:
          - name: envoy.ext_authz
            typed_config:
              "@type": type.googleapis.com/envoy.config.filter.http.ext_authz.v2.ExtAuthz
              failure_mode_allow: false
              clear_route_cache: true
              status_on_error: { code: 503 }
              http_service:
                server_uri: { "uri": "https://auth_cluster/", "cluster": "auth_cluster", "timeout": "0.5s" }
                path_prefix: /auth_request
          - name: envoy.router
            config: {}
  clusters:
  - name: target_cluster
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    # disabled http2: http2_protocol_options: {}
    load_assignment:
      cluster_name: target_cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: target-server
                port_value: 80
  - name: auth_cluster
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    http2_protocol_options: {}
    load_assignment:
      cluster_name: auth_cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: auth
                port_value: 666
